--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "npx prettier --write . && ng lint --fix"
+    "lint": "ng lint --fix && npx prettier --write . "
     
   },
   "private": true,
